--- a/app/src/main/res/layout/activity_show_text.xml
+++ b/app/src/main/res/layout/activity_show_text.xml
@@ -21,8 +21,8 @@
         android:id="@+id/textView_correct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿Es correcto?"
-        android:layout_marginTop="100dp"
+        android:text="@string/es_correcto"
+        android:layout_marginTop="@dimen/marginCorrect"
         style="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,26 +30,26 @@
 
     <Button
         android:id="@+id/btn_si"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/wB"
+        android:layout_height="@dimen/hB"
         android:layout_gravity="center"
-        android:layout_marginLeft="80dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginLeft="@dimen/marginLeft"
+        android:layout_marginBottom="@dimen/marginB"
         android:paddingTop="4dp"
-        android:text="SI"
+        android:text="@string/yes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:onClick="sendMail"/>
 
     <Button
         android:id="@+id/btn_no"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/wB"
+        android:layout_height="@dimen/hB"
         android:layout_gravity="center"
-        android:layout_marginBottom="76dp"
-        android:layout_marginRight="80dp"
-        android:paddingTop="4dp"
-        android:text="NO"
+        android:layout_marginBottom="@dimen/marginB"
+        android:layout_marginRight="@dimen/marginR"
+        android:paddingTop="@dimen/paddTop"
+        android:text="@string/no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:onClick="goBackMenu"/>
